--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Cairo', sans-serif; }
         body { background: var(--white); color: var(--brown); overflow-x: hidden; scroll-behavior: smooth; }
 
-        .top-banner { background: var(--brown); color: white; padding: 8px 5%; text-align: center; font-size: 13px; }
+        /* البنر العلوي القهوائي */
+        .top-banner { background: var(--brown); color: white; padding: 8px 5%; text-align: center; font-size: 13px; display: flex; justify-content: space-between; align-items: center; }
+        .phone-fix { direction: ltr; font-weight: bold; }
 
-        /* الهيدر المكتمل */
-        header { 
-            background: var(--white); padding: 12px 5%; display: flex; 
-            justify-content: space-between; align-items: center; 
-            position: sticky; top: 0; z-index: 1000; box-shadow: 0 4px 15px rgba(0,0,0,0.05); 
-        }
-        .header-right { flex: 1; display: flex; justify-content: flex-start; }
-        .brand-text { font-size: 1.9rem; font-weight: 900; color: var(--brown); line-height: 1; text-align: right; }
-        .header-center { flex: 1; display: flex; justify-content: center; }
+        /* الهيدر المطور */
+        header { background: var(--white); padding: 12px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
+        .brand-text { font-size: 1.9rem; font-weight: 900; color: var(--brown); line-height: 1; text-align: right; flex: 1; }
+        .logo-center { flex: 1; display: flex; justify-content: center; }
         .logo-img { height: 95px; cursor: pointer; transition: 0.3s; }
-        .header-left { flex: 1; display: flex; justify-content: flex-end; align-items: center; gap: 20px; }
+        .header-left-actions { flex: 1; display: flex; justify-content: flex-end; align-items: center; gap: 20px; }
         .whatsapp-link { text-decoration: none; color: #25D366; font-weight: 700; display: flex; align-items: center; gap: 8px; font-size: 0.95rem; }
         .cart-icon { font-size: 1.6rem; color: var(--brown); cursor: pointer; position: relative; }
         .cart-count { position: absolute; top: -8px; right: -10px; background: var(--gold); color: white; font-size: 0.75rem; padding: 2px 7px; border-radius: 50%; font-weight: 900; }
@@ -44,6 +41,12 @@
             background-size: cover; background-position: center; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; color: var(--white); padding: 20px;
         }
         .hero h1 { font-size: clamp(35px, 7vw, 60px); font-weight: 900; margin-bottom: 15px; text-shadow: 2px 2px 8px rgba(0,0,0,0.3); }
+        .hero h1 span { color: var(--gold); }
+        .hero-btns { display: flex; gap: 20px; margin-top: 35px; flex-wrap: wrap; justify-content: center; }
+        .btn-gold { background: var(--gold); color: white; border: none; padding: 16px 38px; border-radius: 8px; font-weight: bold; cursor: pointer; transition: 0.3s; }
+        .btn-outline { background: rgba(0,0,0,0.3); border: 2px solid white; color: white; padding: 16px 38px; border-radius: 8px; font-weight: bold; cursor: pointer; transition: 0.3s; backdrop-filter: blur(5px); }
+
+        /* أيقونات التواصل الستة */
         .social-hero { display: flex; gap: 22px; margin-top: 25px; }
         .social-hero a { color: var(--white); font-size: 1.9rem; transition: 0.3s; }
         .social-hero a:hover { color: var(--gold); transform: translateY(-5px); }
@@ -61,8 +64,9 @@
         .f-card { background: var(--white); padding: 45px 25px; border-radius: 20px; box-shadow: 0 4px 25px rgba(0,0,0,0.05); }
         .f-icon { width: 85px; height: 85px; background: var(--gold); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 30px; color: white; font-size: 2.2rem; }
 
-        /* من نحن */
+        /* من نحن المطور */
         .about-container { max-width: 1100px; margin: auto; padding: 80px 5%; text-align: center; }
+        .about-text-content { max-width: 900px; margin: 0 auto 50px; line-height: 2.2; font-size: 1.2rem; color: #444; text-align: justify; }
         .stats-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 35px; margin-top: 55px; }
         .stat-card { background-color: #eee9e3; padding: 45px 25px; border-radius: 15px; }
         .stat-number { font-size: 2.6rem; font-weight: 900; color: var(--gold); margin-bottom: 10px; }
@@ -70,28 +74,30 @@
         /* الفوتر القهوائي */
         footer { background: var(--brown); color: white; padding: 70px 5% 35px; text-align: center; }
         .footer-grid { display: grid; grid-template-columns: 2.5fr 1fr 1fr 1.5fr; gap: 45px; text-align: right; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 55px; margin-top: 55px; }
+        .footer-logo { font-weight: 900; font-size: 1.7rem; color: var(--gold); }
 
         @media (max-width: 768px) {
             header { flex-direction: column; gap: 20px; }
             .logo-img { height: 75px; }
-            .nav-menu { gap: 20px; flex-wrap: wrap; }
-            .footer-grid, .stats-grid { grid-template-columns: 1fr; text-align: center; }
+            .hero-btns { flex-direction: column; width: 100%; }
+            .footer-grid, .stats-grid, .product-view { grid-template-columns: 1fr; text-align: center; }
             .cat-card { flex: 0 0 85%; }
         }
     </style>
 </head>
 <body>
 
-    <div class="top-banner">مرحباً بكم في شبابيك للستائر - فخامة التفاصيل تبدأ من هنا</div>
+    <div class="top-banner">
+        <span>مرحباً بكم في شبابيك للستائر</span>
+        <span class="phone-fix">+964 788 300 2797 <i class="fa-solid fa-phone"></i></span>
+    </div>
 
     <header>
-        <div class="header-right">
-            <div class="brand-text">شبابيك<br><span style="font-size: 1.25rem; color: var(--gold);">للستائر</span></div>
-        </div>
-        <div class="header-center">
+        <div class="brand-text">شبابيك<br><span style="font-size: 1.25rem; color: var(--gold);">للستائر</span></div>
+        <div class="logo-center">
             <img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" onclick="showPage('homePage')" alt="شعار شبابيك">
         </div>
-        <div class="header-left">
+        <div class="header-left-actions">
             <a href="https://wa.me/9647883002797" class="whatsapp-link">
                 <i class="fab fa-whatsapp" style="font-size: 1.6rem;"></i>
                 <span>تواصل معنا عبر الواتساب</span>
@@ -116,8 +122,10 @@
         <div id="homePage" class="page active">
             <section class="hero">
                 <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
-                <div style="display:flex; gap:22px; margin-top:35px;">
-                    <button style="background:var(--gold); color:white; border:none; padding:16px 38px; border-radius:8px; font-weight:bold; cursor:pointer;" onclick="document.getElementById('categories').scrollIntoView()">احسب سعر ستارتك الآن</button>
+                <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية</p>
+                <div class="hero-btns">
+                    <button class="btn-gold" onclick="document.getElementById('categories').scrollIntoView()">احسب سعر ستارتك الآن</button>
+                    <button class="btn-outline" onclick="window.location.href='https://wa.me/9647883002797'">طلب استشارة منزلية</button>
                 </div>
                 <div class="social-hero">
                     <a href="https://www.facebook.com/profile.php?id=61587692021311" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -153,7 +161,11 @@
         <div id="aboutPage" class="page">
             <div class="about-container">
                 <h2 style="font-size: 2.6rem; font-weight: 800; margin: 45px 0;">شبابيك للستائر</h2>
-                <p style="line-height: 2.2; font-size: 1.25rem; max-width: 850px; margin: 0 auto 55px;">نحن نؤمن بأن الستائر هي اللمسة النهائية التي تمنح منزلك الروح والخصوصية.</p>
+                <div class="about-text-content">
+                    <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر ليست مجرد قطعة قماش، بل هي عنصر أساسي في تصميم المنزل يعكس ذوق أصحابه ويضيف لمسة من الأناقة والفخامة.</p>
+                    <p style="margin-top: 20px;">نقدم مجموعة واسعة من الستائر تشمل البلاك أوت والشفافة والديكورية وستائر الرول، بأقمشة مستوردة من أفضل المصانع العالمية. كما نوفر خدمة التفصيل حسب المقاسات وخدمة التركيب المنزلي بأيدي فنيين متخصصين.</p>
+                    <p style="margin-top: 20px;">رؤيتنا هي أن نكون الوجهة الأولى للستائر الفاخرة في العراق، ونسعى دائماً لتحقيق رضا عملائنا من خلال الجودة العالية والأسعار المنافسة والخدمة المتميزة.</p>
+                </div>
                 <div class="stats-grid">
                     <div class="stat-card"><div class="stat-number">+500</div><p>عميل سعيد</p></div>
                     <div class="stat-card"><div class="stat-number">+50</div><p>تصميم حصري</p></div>
@@ -167,11 +179,12 @@
                 <h2 style="margin-bottom: 30px;">تواصل معنا</h2>
                 <p style="font-size: 1.2rem; margin-bottom: 15px;"><i class="fa-solid fa-location-dot"></i> العراق - بغداد</p>
                 <p style="font-size: 1.2rem; direction: ltr; margin-bottom: 30px;"><i class="fa-solid fa-phone"></i> +964 788 300 2797</p>
-                <button style="background:#25D366; color:white; border:none; padding:16px 40px; border-radius:10px; font-weight:bold; cursor:pointer;" onclick="window.location.href='https://wa.me/9647883002797'">تواصل واتساب مباشر</button>
+                <button class="btn-gold" style="background:#25D366;" onclick="window.location.href='https://wa.me/9647883002797'">تواصل واتساب مباشر</button>
             </div>
         </div>
 
         <div id="categoryView" class="page"><h2 id="catTitle" style="text-align:center; padding: 45px 0; font-size: 2.2rem; font-weight: 800;"></h2><div id="catGrid" style="display:grid; grid-template-columns: repeat(auto-fill, minmax(290px, 1fr)); gap: 25px; padding: 0 5%;"></div></div>
+        
         <div id="productCalculator" class="page">
             <div style="max-width: 1250px; margin: 50px auto; display: grid; grid-template-columns: 1fr 1fr; gap: 55px; padding: 0 5%;">
                 <div class="calc-box">
@@ -181,8 +194,11 @@
                         <div><label>العرض (سم)</label><input type="number" id="wIn" style="width:100%; padding:14px; border:1px solid #ddd; border-radius:8px;" oninput="doCalc()"></div>
                         <div><label>الطول (سم)</label><input type="number" id="hIn" style="width:100%; padding:14px; border:1px solid #ddd; border-radius:8px;" oninput="doCalc()"></div>
                     </div>
-                    <div style="background:var(--brown); color:white; padding:22px; border-radius:15px; margin: 25px 0; text-align:center; font-size: 1.6rem;">الإجمالي: <span id="resPrice">0</span> د.ع</div>
-                    <button style="background:var(--gold); color:white; width:100%; padding:18px; border:none; border-radius:12px; font-weight:bold; font-size: 1.2rem; cursor:pointer;" onclick="addToCart()">إضافة إلى السلة</button>
+                    <label style="display:flex; align-items:center; justify-content:flex-end; gap:10px; margin:20px 0; background:var(--bg); padding:12px; border-radius:10px; cursor:pointer;">
+                        <span>طلب خدمة التركيب</span><input type="checkbox" id="instIn" style="width:22px; height:22px;">
+                    </label>
+                    <div style="background:var(--brown); color:white; padding:22px; border-radius:15px; margin: 25px 0; text-align:center; font-size: 1.6rem;">الإجمالي التقديري: <span id="resPrice">0</span> د.ع</div>
+                    <button class="btn-gold" style="width:100%; font-size: 1.2rem;" onclick="addToCart()">إضافة إلى السلة</button>
                 </div>
                 <img id="pImg" src="" style="width:100%; border-radius:25px; box-shadow: 0 25px 45px rgba(0,0,0,0.15);">
             </div>
@@ -190,17 +206,19 @@
     </main>
 
     <footer>
+        <div style="margin-bottom: 40px;">
+            <button class="btn-gold" onclick="showPage('homePage'); document.getElementById('categories').scrollIntoView()">تصفح المنتجات الآن</button>
+        </div>
         <div class="footer-grid">
             <div><h3>شبابيك للستائر</h3><p style="opacity:0.8; font-size: 0.95rem; line-height: 1.8;">نقدم أرقى حلول الستائر المنزلية في العراق بأعلى معايير الجودة.</p></div>
             <div><h3>روابط سريعة</h3><ul style="list-style:none; opacity:0.8; line-height:2.8;"><li onclick="showPage('homePage')">الرئيسية</li><li onclick="showPage('aboutPage')">من نحن</li><li onclick="showPage('contactPage')">تواصل معنا</li></ul></div>
             <div><h3>تواصل معنا</h3><p style="opacity:0.8; margin-bottom: 5px;">بغداد - العراق</p><p style="direction: ltr; font-weight: 700;">+964 788 300 2797</p></div>
-            <div style="font-weight:900; font-size: 1.7rem; color: var(--gold);">شبابيك</div>
+            <div class="footer-logo">شبابيك</div>
         </div>
         <p style="text-align:center; margin-top:55px; opacity:0.35; font-size: 0.85rem;">© 2026 شبابيك للستائر - جميع الحقوق محفوظة</p>
     </footer>
 
     <script>
-        // استعادة البيانات أو استخدام مصفوفة فارغة
         let db = JSON.parse(localStorage.getItem('sh_db_pro')) || [];
         let cur = null; let cart = [];
 
