--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Cairo', sans-serif; }
         body { background: var(--white); color: var(--brown); overflow-x: hidden; scroll-behavior: smooth; }
 
-        /* البنر العلوي القهوائي */
+        /* البنر العلوي */
         .top-banner { background: var(--brown); color: white; padding: 8px 5%; text-align: center; font-size: 13px; display: flex; justify-content: space-between; align-items: center; }
         .phone-fix { direction: ltr; font-weight: bold; }
 
@@ -26,10 +26,9 @@
         .cart-icon { font-size: 1.6rem; color: var(--brown); cursor: pointer; position: relative; }
         .cart-count { position: absolute; top: -8px; right: -10px; background: var(--gold); color: white; font-size: 0.75rem; padding: 2px 7px; border-radius: 50%; font-weight: 900; }
 
-        /* القائمة */
         .nav-bar { background: #fcfcfc; border-bottom: 1px solid #eee; padding: 12px 0; }
         .nav-menu { display: flex; gap: 45px; list-style: none; justify-content: center; }
-        .nav-menu a { text-decoration: none; color: var(--brown); font-weight: 700; cursor: pointer; font-size: 1.05rem; transition: 0.3s; }
+        .nav-menu a { text-decoration: none; color: var(--brown); font-weight: 700; cursor: pointer; font-size: 1.05rem; }
         .nav-menu a:hover { color: var(--gold); }
 
         .page { display: none; }
@@ -40,16 +39,13 @@
             height: 85vh; background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.15)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
             background-size: cover; background-position: center; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; color: var(--white); padding: 20px;
         }
-        .hero h1 { font-size: clamp(35px, 7vw, 60px); font-weight: 900; margin-bottom: 15px; text-shadow: 2px 2px 8px rgba(0,0,0,0.3); }
-        .hero h1 span { color: var(--gold); }
+        .hero h1 { font-size: clamp(35px, 7vw, 60px); font-weight: 900; margin-bottom: 15px; }
         .hero-btns { display: flex; gap: 20px; margin-top: 35px; flex-wrap: wrap; justify-content: center; }
-        .btn-gold { background: var(--gold); color: white; border: none; padding: 16px 38px; border-radius: 8px; font-weight: bold; cursor: pointer; transition: 0.3s; }
-        .btn-outline { background: rgba(0,0,0,0.3); border: 2px solid white; color: white; padding: 16px 38px; border-radius: 8px; font-weight: bold; cursor: pointer; transition: 0.3s; backdrop-filter: blur(5px); }
+        .btn-gold { background: var(--gold); color: white; border: none; padding: 16px 38px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        .btn-outline { background: rgba(0,0,0,0.3); border: 2px solid white; color: white; padding: 16px 38px; border-radius: 8px; font-weight: bold; cursor: pointer; backdrop-filter: blur(5px); }
 
-        /* أيقونات التواصل الستة */
         .social-hero { display: flex; gap: 22px; margin-top: 25px; }
-        .social-hero a { color: var(--white); font-size: 1.9rem; transition: 0.3s; }
-        .social-hero a:hover { color: var(--gold); transform: translateY(-5px); }
+        .social-hero a { color: var(--white); font-size: 1.9rem; }
 
         /* الأقسام */
         .catalog-grid { display: flex; flex-wrap: nowrap; overflow-x: auto; gap: 20px; padding: 40px 5%; max-width: 1300px; margin: auto; scrollbar-width: none; }
@@ -64,23 +60,24 @@
         .f-card { background: var(--white); padding: 45px 25px; border-radius: 20px; box-shadow: 0 4px 25px rgba(0,0,0,0.05); }
         .f-icon { width: 85px; height: 85px; background: var(--gold); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 30px; color: white; font-size: 2.2rem; }
 
-        /* من نحن المطور */
+        /* من نحن */
         .about-container { max-width: 1100px; margin: auto; padding: 80px 5%; text-align: center; }
         .about-text-content { max-width: 900px; margin: 0 auto 50px; line-height: 2.2; font-size: 1.2rem; color: #444; text-align: justify; }
         .stats-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 35px; margin-top: 55px; }
         .stat-card { background-color: #eee9e3; padding: 45px 25px; border-radius: 15px; }
         .stat-number { font-size: 2.6rem; font-weight: 900; color: var(--gold); margin-bottom: 10px; }
 
-        /* الفوتر القهوائي */
         footer { background: var(--brown); color: white; padding: 70px 5% 35px; text-align: center; }
         .footer-grid { display: grid; grid-template-columns: 2.5fr 1fr 1fr 1.5fr; gap: 45px; text-align: right; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 55px; margin-top: 55px; }
         .footer-logo { font-weight: 900; font-size: 1.7rem; color: var(--gold); }
 
+        .admin-box { max-width: 600px; margin: 50px auto; background: #f4f4f4; padding: 30px; border-radius: 15px; }
+        .admin-box input, .admin-box select { width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 8px; border: 1px solid #ccc; }
+
         @media (max-width: 768px) {
             header { flex-direction: column; gap: 20px; }
             .logo-img { height: 75px; }
-            .hero-btns { flex-direction: column; width: 100%; }
-            .footer-grid, .stats-grid, .product-view { grid-template-columns: 1fr; text-align: center; }
+            .footer-grid, .stats-grid { grid-template-columns: 1fr; text-align: center; }
             .cat-card { flex: 0 0 85%; }
         }
     </style>
@@ -95,7 +92,7 @@
     <header>
         <div class="brand-text">شبابيك<br><span style="font-size: 1.25rem; color: var(--gold);">للستائر</span></div>
         <div class="logo-center">
-            <img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" onclick="showPage('homePage')" alt="شعار شبابيك">
+            <img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" onclick="checkAdmin()" alt="شعار شبابيك">
         </div>
         <div class="header-left-actions">
             <a href="https://wa.me/9647883002797" class="whatsapp-link">
@@ -183,6 +180,18 @@
             </div>
         </div>
 
+        <div id="adminPanel" class="page">
+            <div class="admin-box">
+                <h2>إدارة المنتجات</h2>
+                <select id="aCat"><option>بلاك أوت</option><option>شفافة</option><option>ديكور</option><option>رول</option></select>
+                <input type="text" id="aName" placeholder="اسم المنتج">
+                <input type="number" id="aPrice" placeholder="السعر لكل م²">
+                <input type="text" id="aImg" placeholder="رابط الصورة">
+                <button class="btn-gold" style="width:100%" onclick="saveProd()">حفظ المنتج</button>
+                <div id="adminList" style="margin-top:20px;"></div>
+            </div>
+        </div>
+
         <div id="categoryView" class="page"><h2 id="catTitle" style="text-align:center; padding: 45px 0; font-size: 2.2rem; font-weight: 800;"></h2><div id="catGrid" style="display:grid; grid-template-columns: repeat(auto-fill, minmax(290px, 1fr)); gap: 25px; padding: 0 5%;"></div></div>
         
         <div id="productCalculator" class="page">
@@ -191,8 +200,8 @@
                     <h1 id="pName" style="font-size: 2.4rem; margin-bottom: 12px;"></h1>
                     <div style="color:var(--gold); font-size: 2.1rem; font-weight: 900; margin: 25px 0;"><span id="pPrice"></span> د.ع / م²</div>
                     <div style="display:grid; grid-template-columns: 1fr 1fr; gap: 20px;">
-                        <div><label>العرض (سم)</label><input type="number" id="wIn" style="width:100%; padding:14px; border:1px solid #ddd; border-radius:8px;" oninput="doCalc()"></div>
-                        <div><label>الطول (سم)</label><input type="number" id="hIn" style="width:100%; padding:14px; border:1px solid #ddd; border-radius:8px;" oninput="doCalc()"></div>
+                        <div><label>العرض (سم)</label><input type="number" id="wIn" oninput="doCalc()"></div>
+                        <div><label>الطول (سم)</label><input type="number" id="hIn" oninput="doCalc()"></div>
                     </div>
                     <label style="display:flex; align-items:center; justify-content:flex-end; gap:10px; margin:20px 0; background:var(--bg); padding:12px; border-radius:10px; cursor:pointer;">
                         <span>طلب خدمة التركيب</span><input type="checkbox" id="instIn" style="width:22px; height:22px;">
@@ -221,11 +230,25 @@
     <script>
         let db = JSON.parse(localStorage.getItem('sh_db_pro')) || [];
         let cur = null; let cart = [];
+        let adminClicks = 0;
 
         function showPage(id) {
             document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
             document.getElementById(id).classList.add('active');
             window.scrollTo(0,0);
+        }
+
+        // تفعيل لوحة التحكم عبر الشعار (5 ضغطات) كما طلبت
+        function checkAdmin() {
+            adminClicks++;
+            if(adminClicks >= 5) {
+                const pass = prompt("الرمز:");
+                if(pass === "1234") { showPage('adminPanel'); showAdminList(); }
+                adminClicks = 0;
+            } else {
+                // إذا لم تصل لـ 5 ضغطات، تعود للرئيسية كالعادة
+                showPage('homePage');
+            }
         }
 
         function openCat(name) {
@@ -234,23 +257,39 @@
             document.getElementById('catGrid').innerHTML = items.map(i => `
                 <div style="background:white; border-radius:18px; overflow:hidden; box-shadow:0 6px 18px rgba(0,0,0,0.1); cursor:pointer;" onclick='openCalc(${JSON.stringify(i)})'>
                     <img src="${i.img}" style="width:100%; height:290px; object-fit:cover;">
-                    <div style="padding:22px; text-align:center;"><h3>${i.name}</h3><p style="color:var(--gold); font-weight:900;">${i.price} د.ع</p></div>
-                </div>`).join('');
+                    <div style="padding:22px; text-align:center;"><h3>${i.name}</h3><p style="color:var(--gold); font-weight:900;">${i.price} د.ع / م²</p></div>
+                </div>`).join('') || '<p style="text-align:center; grid-column:1/-1;">لا توجد منتجات حالياً.</p>';
             showPage('categoryView');
         }
 
         function openCalc(p) { cur = p; document.getElementById('pName').innerText = p.name; document.getElementById('pPrice').innerText = p.price; document.getElementById('pImg').src = p.img; document.getElementById('resPrice').innerText = "0"; showPage('productCalculator'); }
         function doCalc() { const w = document.getElementById('wIn').value/100; const h = document.getElementById('hIn').value/100; if(w && h) document.getElementById('resPrice').innerText = Math.round(w*h*cur.price).toLocaleString(); }
+        
         function addToCart() { 
             const w = document.getElementById('wIn').value; const h = document.getElementById('hIn').value;
             if(!w || !h) return alert("يرجى إدخال المقاسات");
             cart.push({n:cur.name, s:`${w}x${h}`, p:document.getElementById('resPrice').innerText}); 
             document.getElementById('globalCartCount').innerText = cart.length; alert("تمت إضافة المنتج إلى السلة"); 
         }
+
         function openCart() { 
             if(cart.length === 0) return alert("سلة التسوق فارغة");
             let m = "طلب جديد:\n"; cart.forEach((i, idx) => m += `${idx+1}- ${i.n} (${i.s}): ${i.p} د.ع\n`); 
             window.location.href=`https://wa.me/9647883002797?text=${encodeURIComponent(m)}`; 
+        }
+
+        function saveProd() {
+            db.push({id: Date.now(), category: document.getElementById('aCat').value, name: document.getElementById('aName').value, price: document.getElementById('aPrice').value, img: document.getElementById('aImg').value});
+            localStorage.setItem('sh_db_pro', JSON.stringify(db));
+            alert("تم الحفظ!"); showAdminList();
+        }
+
+        function showAdminList() {
+            document.getElementById('adminList').innerHTML = db.map(i => `<div style="display:flex; justify-content:space-between; padding:8px; border-bottom:1px solid #ddd;"><span>${i.name}</span><button onclick="delProd(${i.id})" style="color:red; border:none; background:none; cursor:pointer;">حذف</button></div>`).join('');
+        }
+
+        function delProd(id) {
+            if(confirm("حذف؟")) { db = db.filter(i => i.id !== id); localStorage.setItem('sh_db_pro', JSON.stringify(db)); showAdminList(); }
         }
     </script>
 </body>
